tdf#92732: fix vclptr lifecycle for index entry editing dialog

Call SwViewShell::SetCareWin() in closeHdl instead of d'tor
since with care window set the d'tor is never called

Reviewed-on: https://gerrit.libreoffice.org/18330
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit 51ac2bf234a98d8f7629132b59f6961597ecea14)

Change-Id: Ieb8280ab57c3bccf95ce2ce96937aab261133ce0
Reviewed-on: https://gerrit.libreoffice.org/18333
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>