sw/source/ui/index/swuiidxmrk.cxx
@@ -621,6 +621,7 @@ IMPL_LINK_NOARG(SwIndexMarkPane, CloseHdl)
     }
     else
     {
+        SwViewShell::SetCareWin( 0 );
         m_rDialog.EndDialog(RET_CANCEL);
     }
     return 0;
@@ -930,7 +931,6 @@ IMPL_LINK( SwIndexMarkPane, KeyDCBModifyHdl, ComboBox *, pBox )
 SwIndexMarkPane::~SwIndexMarkPane()
 {
     delete pTOXMgr;
-    SwViewShell::SetCareWin( 0 );
 }
 
 void    SwIndexMarkPane::ReInitDlg(SwWrtShell& rWrtShell, SwTOXMark* pCurTOXMark)
